<resources>
    <string name="app_name">Mutfak Dolabi</string>
    <string name="app_name_turkce">Mutfak Dolabı</string>
    <string name="giris">Giriş</string>
    <string name="kullanici_adi">Kullanıcı Adı</string>
    <string name="sifre">Şifre</string>
    <string name="sifremi_unuttum">Şifremi Unuttum</string>
    <string name="hesabin_yok_mu_kayit_ol">Hesabın yok mu? Kayıt ol</string>
    <string name="e_posta">E-Posta</string>
    <string name="kayit_ol">Kayıt Ol</string>
    <string name="hesabin_var_mi_giris_yap">Hesabın var mı? Giriş yap</string>
    <string name="grup_olustur">Grup Oluştur</string>
    <string name="gruba_ekle">Gruba Ekle</string>
    <string name="grubu_sil">Grubu Sil</string>
    <string name="iptal">Iptal</string>
    <string name="tamam">Tamam</string>
    <string name="burada_gostericek_bir_sey_yok">Burada gostericek bir sey yok!</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="baslik">Başlık</string>
    <string name="aciklama">Açıklama</string>
    <string name="istek_urun_ekle">İstek Ürün Ekle</string>
    <string name="isim">İsim</string>
    <string name="birim">Birim</string>
    <string name="miktar">Miktar</string>
</resources>